# fpy

./: AGENTS.md  Cargo.toml  README.md
docs/: edtui-editor-testing-plan.md  edtui-vim-refactor-plan.md
scripts/: benchmark-startup.sh  fpy-harness.exp  fpy-harness.sh  fpy-tmux-repro.sh
src/: app.rs  cli.rs  connection.rs  custom_terminal.rs  history.rs  insert_history.rs  jupyter.rs  kernel.rs  lib.rs  main.rs  ui.rs
src/insert_history/: mod.rs  text.rs
src/kernel/: diagnostics.rs  messages.rs  mod.rs  runtime.rs
src/ui/: editor.rs  mod.rs  render.rs  transcript.rs
tests/: tmux_e2e.rs
