[package]
name = "fpy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
edtui = { path = "vendor/edtui" }
futures = "0.3"
hmac = "0.12"
libc = "0.2"
nucleo = "0.5"
ratatui = { version = "0.30", features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"
throbber-widgets-tui = "0.11"
tokio = { version = "1.48", features = ["full"] }
uuid = { version = "1.18", features = ["v4", "v7", "serde"] }
unicode-width = "0.2"
zeromq = "0.5"
